--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav a {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: url('../assets/home_background.png') bottom/contain no-repeat;;
+    background: url('../assets/home_background.png') bottom/contain no-repeat;
 }
 
 .name {
