--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ nav a:hover {
 }
 
 .home {
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
