--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ nav a:hover {
 }
 
 .work {
-    height: 100vh;
+    min-height: 100vh;
     text-align: left;
     display: flex;
     flex-direction: row-reverse;
@@ -197,11 +197,35 @@ nav a:hover {
 
 .contact {
     height: 100vh;
-    text-align: center;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+}
+
+.container1{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-color: #000000;
+    align-self: left;
+}
+
+.container1 h2{
+    color: #FFFFFF;
+}
+
+.container2{
+    background-color: red;
+    height: 100%;
+}
+
+.container3{
+    background-color: green;
+    height: 50%;
+
+}
+
+.container4{
+    background-color: blue;
+    height: 50%;
+
 }
 
 h1,
@@ -224,6 +248,15 @@ li {
     font-family: "Amiko", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+@media (max-width: 1280px){
+    .contact {
+        height: 100vh;
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+    }
+    
 }
 
 @media (max-width: 960px) {
@@ -287,6 +320,37 @@ li {
         width: 30ch
     }
 
+    .contact {
+        height: auto;
+        grid-template-columns: 1fr;
+    }
+    
+    .container1{
+        display: flex;
+        background-color: #000000;
+        align-self: left;
+    }
+    
+    .container1 h2{
+        color: #FFFFFF;
+    }
+    
+    .container2{
+        background-color: red;
+        height: 100%;
+    }
+    
+    .container3{
+        background-color: green;
+        height: 50%;
+    
+    }
+    
+    .container4{
+        background-color: blue;
+        height: 50%;
+    
+    }
 
 
 
