--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ nav a:hover {
     /* margin-block: 3rem; */
     padding-block: 5rem;
     padding-inline: 3rem;
-    border: 1px solid #ccc;
+    border: 1px solid #CCCCCC;
 }
 
 .work {
@@ -251,7 +251,7 @@ nav a:hover {
 }
 
 .container1{
-    background-color: #000000;
+    background-color: #0E0F11;
     height: 100%;
     display: flex;
     flex-direction: column;
