--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ nav a:hover {
     flex-direction: row-reverse;
     gap: 7rem;
     align-items: center;
-
 }
 
 .work h2 {
@@ -250,7 +249,8 @@ nav a:hover {
 }
 
 .allboro_image {
-    max-height: 65%;
+    max-width: 100%;
+    max-height: 55vh;
     object-fit: contain;
 }
 
@@ -431,6 +431,7 @@ a {
     .work {
         margin-top: 3rem;
         flex-direction: column;
+        gap: 1rem;
     }
 
     .work h2 {
