--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ button {
     
     .container1{
         display: flex;
-        background-color: #000000;
+        background-color: #0E0F11;
         padding-bottom: 3rem;
     }
     
