--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ nav a:hover {
 }
 
 .container1{
-    background-color: #0E0F11;
+    background-color: #2C2D30;
     height: 100%;
     display: flex;
     flex-direction: column;
