--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -182,7 +182,7 @@ nav a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url('./src/assets/home_background.png') bottom/contain no-repeat;
+  background: url('../assets/home_background.png') bottom/contain no-repeat;
 }
 
 .name {
