--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,8 @@ h2 {
   margin-bottom: 0rem;
 }
 
-h3 {
+h3,
+dt {
   font-family: 'Amiko', sans-serif;
   font-weight: 800;
   font-style: normal;
@@ -98,7 +99,9 @@ h3 {
 p,
 li,
 a,
+dd,
 button {
+  margin: 0;
   font-family: 'Amiko', sans-serif;
   font-weight: 400;
   font-style: normal;
