--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -1,66 +1,137 @@
-.work {
+.my-work {
   min-height: 100vh;
-  text-align: left;
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 7rem;
-  align-items: center;
-}
-
-.work h2 {
-  margin: 0;
-  font-size: 5rem;
-  line-height: 1;
-  width: 15%;
-}
-
-.allboro_container {
   display: flex;
   flex-direction: column;
-}
+  gap: 1.5rem;
+  align-items: center;
 
-.allboro_description {
-  width: 40ch;
-}
+  & h2 {
+    margin: 0;
+    font-size: 5rem;
+    line-height: 1;
+  }
 
-.allboro_image {
-  max-width: 100%;
-  max-height: 55vh;
-  object-fit: contain;
-}
+  & > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2.5rem;
+    padding: 3rem 4rem;
 
-.allboro_container button {
-  width: max-content;
-  padding: 0.5rem 1.5rem;
-  background: #000000;
-  border-radius: 5px;
-  border-width: 0;
-  appearance: unset;
-  font-size: 1rem;
-  cursor: pointer;
-}
+    & dl {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
 
-.allboro_container a {
-  text-decoration: none;
-  color: #ffffff;
-}
+      & hgroup > dt {
+        margin: 0;
+        font-size: 2.5rem;
+        line-height: 1;
+      }
 
-.allboro_container button:hover {
-  opacity: 80%;
+      & > a {
+        cursor: pointer;
+        text-decoration: none;
+        font-size: 0.75rem;
+
+        padding: 0.25rem 2rem;
+        border-radius: 0.5rem;
+        border: none;
+        transition: 0.3s ease-out;
+
+        &:hover {
+          scale: 103%;
+        }
+      }
+    }
+
+    & img {
+      max-width: 100%;
+      max-height: 55vh;
+      object-fit: contain;
+    }
+  }
+
+  & > div:nth-child(even) {
+    background-color: var(--cinza-200);
+
+    & img {
+      order: 1;
+      justify-self: end;
+    }
+
+    & dl {
+      order: 2;
+
+      & > a {
+        align-self: flex-start;
+        background-color: var(--branco);
+        color: var(--preto);
+
+        &:hover {
+          background-color: var(--preto);
+          color: var(--branco);
+        }
+      }
+    }
+  }
+
+  & > div:nth-child(odd) {
+    & img {
+      order: 2;
+    }
+
+    & dl {
+      order: 1;
+
+      & dt,
+      & dd,
+      & a {
+        text-align: right;
+      }
+
+      & > a {
+        align-self: flex-end;
+        background-color: var(--preto);
+        color: var(--branco);
+
+        &:hover {
+          background-color: var(--branco);
+          color: var(--preto);
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 960px) {
-  .work {
-    margin-top: 3rem;
-    flex-direction: column;
-    gap: 1rem;
-  }
+  .my-work {
+    padding-top: 6rem;
 
-  .work h2 {
-    font-size: 2.5rem;
-  }
+    & h2 {
+      font-size: 2.5rem;
+    }
 
-  .work p {
-    width: 30ch;
+    & > div {
+      display: flex;
+      flex-direction: column;
+    }
+
+    & > div:nth-child(even),
+    & > div:nth-child(odd) {
+      & img {
+        order: 2;
+        justify-self: end;
+      }
+
+      & dl {
+        order: 1;
+
+        & dt,
+        & dd,
+        & a {
+          text-align: left;
+        }
+      }
+    }
   }
 }
